hide youtube video

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
           <strong>LineMaster 2.4GHz LM‑5X</strong> receiver directly from your
           browser.
         </p>
-        <div class="videoWrapper">
+        <!-- <div class="videoWrapper">
           <lite-youtube
             videoid="5EhpCTnGJlE"
             videotitle="LineMaster 2.4GHz LM‑5X Receiver Firmware Update"
           ></lite-youtube>
-        </div>
+        </div> -->
         <p><strong>Before you update:</strong></p>
         <ol>
           <li>
